# tsp-meta-solver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  execution.md  tspmetasolver.json  tspmetasolver.set
backend/: CMakeLists.txt  main_cli.cpp
backend/src/controller/: configcontroller.cpp  configcontroller.h  constructioncontroller.cpp  constructioncontroller.h  executorcontroller.cpp  executorcontroller.h  iconfigservice.h  iconstructionservice.h  iexecutorservice.h  igeneratorservice.h  itspservice.h  tspcontroller.cpp  tspcontroller.h
backend/src/repository/: configrepository.cpp  configrepository.h  constructionrepository.cpp  constructionrepository.h  tsprepository.cpp  tsprepository.h
backend/src/repository/configuration/: IConfigurationProvider.h  configurationprovider.cpp  configurationprovider.h
backend/src/repository/configuration2/: configprovider.cpp  configprovider.h  iconfigprovider.h
backend/src/repository/configuration2/compute/: computestartingnode.cpp  computestartingnode.h  icomputesetting.h
backend/src/repository/configuration2/config/: concordegeneralsetting.cpp  concordegeneralsetting.h  concordeinstancesetting.cpp  concordeinstancesetting.h  farthestinsertiongeneralsetting.cpp  farthestinsertiongeneralsetting.h  farthestinsertioninstancesetting.cpp  farthestinsertioninstancesetting.h  igeneralsetting.h  iinstancesetting.h  isetting.h  lkh3generalsetting.cpp  lkh3generalsetting.h  lkh3instancesetting.cpp  lkh3instancesetting.h  nearestinsertiongeneralsetting.cpp  nearestinsertiongeneralsetting.h  nearestinsertioninstancesetting.cpp  nearestinsertioninstancesetting.h  nearestneighbourgeneralsetting.cpp  nearestneighbourgeneralsetting.h  nearestneighbourinstancesetting.cpp  nearestneighbourinstancesetting.h
backend/src/repository/construction/: instanceconstruction.h  tspconstruction.cpp  tspconstruction.h
backend/src/repository/parser/: iparser.h  jsonnode.cpp  jsonnode.h  jsonnodeimpl.h  jsonparser.cpp  jsonparser.h
backend/src/repository/problem/: edgedataformat.h  iproblem.h  problemtype.h  tspproblem.cpp  tspproblem.h
backend/src/repository/reader/: attreader 2.h  attreader.cpp  attreader.h  ceil2dreader 2.cpp  ceil2dreader 2.h  ceil2dreader.cpp  ceil2dreader.h  euc2dreader 2.cpp  euc2dreader 2.h  euc2dreader.cpp  euc2dreader.h  georeader 2.cpp  georeader 2.h  georeader.cpp  georeader.h  matrixreader 2.cpp  matrixreader.cpp  matrixreader.h  reader 2.h  reader.h  tspreader 2.h  tspreader.h
backend/src/repository/writer/: csvwriter.cpp  csvwriter.h  filewriter.cpp  filewriter.h  writer.h
backend/src/service/: configservice.cpp  configservice.h  constructionservice.cpp  constructionservice.h  executorservice.cpp  executorservice.h  generatorservice.cpp  generatorservice.h  iconfigrepository.h  iconstructionrepository.h  itsprepositoy.h  tspservice.cpp  tspservice.h
backend/src/service/algorithm/: concordeconfig.h  concordeconfiguration.h  concordesolver.cpp  concordesolver.h  farthestinsertion.cpp  farthestinsertion.h  ficonfig.h  generalconfig.h  ialgorithm.h  ipath.h  isolution.h  isolutioncollector.h  lkh3config.h  lkh3solver.cpp  lkh3solver.h  nearestinsertion.cpp  nearestinsertion.h  nearestneighbour.cpp  nearestneighbour.h  niconfig.h  nnconfig.h  path.cpp  path.h  solutioncollector.cpp  solutioncollector.h  tspsolution.cpp  tspsolution.h
backend/src/service/executor/: executiontask.cpp  executiontask.h  iexecutiontask.h  iexecutor.h  singlequeexecutor.cpp  singlequeexecutor.h  singlequeueexecutor.cpp  singlequeueexecutor.h  workstealingexecutor.cpp  workstealingexecutor.h
backend/src/service/generator/: igenerator.h  integratilitygapgenerator.cpp  integratilitygapgenerator.h  nigenerator.cpp  nigenerator.h  nngenerator.cpp  nngenerator.h
backend/src/service/generator/shortestPath/: dijkstra.cpp  dijkstra.h  floydwarshall.cpp  floydwarshall.h  ishortestpath.h
backend/src/service/graph/: igraph.h  node.h  symmetricgraph.cpp  symmetricgraph.h
backend/src/service/problem/: displaydatatype.h  edgeweightformat.h  edgeweighttype.h  iproblem.h  nodecoordtype.h  tspproblem.h
backend/test/controller/: contructioncontroller_test.cpp  executorcontroller_test.cpp  tspcontroller_test.cpp
backend/test/repository/: tsprepository_test.cpp
backend/test/repository/configuration/: configurationprovider_test.cpp
backend/test/repository/reader/: attreader_test.cpp  ceil2dreader_test.cpp  cor_test.cpp  euc2dreader_test.cpp  georeader_test.cpp  matrixreader_test.cpp
backend/test/repository/writer/: csvwriter_test.cpp
backend/test/service/: executorservice_test.cpp  tspservice_test.cpp
backend/test/service/algorithm/: concordesolver_test.cpp  farthestinsertion_test.cpp  lkh3solver_test.cpp  nearestinsertion_test.cpp  nearestneighbour_test.cpp  singlequeueexecutor_test.cpp  test_fake.cpp  workstealingexecutor_test.cpp
backend/test/service/generator/: dijkstra_test.cpp  integralitygapgenerator_test.cpp  nigenerator_test.cpp  nngenerator_test.cpp
backend/test/service/graph/: symmetricgraph_test.cpp
backend/test/utils/: testutils.cpp  testutils.h
build-cli/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
configuration/: tspmetasolver.set
frontend/: CMakeLists.txt  main.cpp
frontend/src/: main.cpp  start.cpp  start.h
frontend/src/utils/: initializer.cpp  initializer.h
resources/: 10001_hard.tsp  10007_hard.tsp  10008_hard.tsp  10010_hard.tsp  11675_hard.tsp  12290_hard.tsp  14850_hard.tsp  15002_hard.tsp  15005_hard.tsp  15007_hard.tsp  16038_hard.tsp  20004_hard.tsp  20007_hard.tsp  20009_hard.tsp  20181_hard.tsp  25001_hard.tsp  25004_hard.tsp  25006_hard.tsp  30001_hard.tsp  30003_hard.tsp  30005_hard.tsp  33001_hard.tsp  35002_hard.tsp  35003_hard.tsp  35009_hard.tsp  40003_hard.tsp  40004_hard.tsp  40008_hard.tsp  Tnm100.tsp  Tnm103.tsp  Tnm106.tsp  (+69 more)
(+51 files in other folders)
